PDDS experiments update

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,16 @@
-jax==0.4.17 
-jaxlib==0.4.17
-keras>=3.5.0
-
-tensorflow
-tensorflow-probability
-torch
-numpyro
-inference_gym
-diffrax
+jax
+jaxtyping
 dm-haiku
+numpy
 optax
-equinox
-flax
-
-tqdm
 matplotlib
 seaborn
-
-jaxtyping
-chex
-check_shapes
-fsspec
-jupytext
-
-gpustat
-wandb
-hydra_core==1.1.1
-hydra_colorlog==1.1
-hydra-joblib-launcher==1.1.5
-submitit
-hydra-submitit-launcher
-
-black
-ipykernel
-ipywidgets
-
-matplotlib 
-seaborn 
-jupyter 
-tensorflow 
-tensorflow-probability 
-torch 
-numpyro 
-hydra-core==1.1.1 
-hydra_colorlog==1.1
+tqdm
+check-shapes>=1.1.1
+equinox
+tensorflow-probability==0.24.0
+tf-keras==2.19.0
+keras==3.9.2
+tensorflow==2.19.0
+hydra-core==1.3.2
+omegaconf>=2.3.0 
