--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ jax
 jaxtyping
 dm-haiku
 numpy
+numpyro
 optax
 matplotlib
 seaborn
@@ -14,3 +15,4 @@ keras==3.9.2
 tensorflow==2.19.0
 hydra-core==1.3.2
 omegaconf>=2.3.0 
+diffrax
